Fix: Back button styles fixed on mobile view

--- a/src/components/AddAccount/AddAccount.module.scss
+++ b/src/components/AddAccount/AddAccount.module.scss
@@ -350,5 +350,9 @@
                 min-width: unset;
             }
         }
+
+        .backButton {
+            margin-bottom: 0;
+        }
     }
 }
